# w4py3

./: .buildinfo  .flake8  .gitignore  .pylintrc  LICENSE  MANIFEST.in  README.md  appdev.html  changes.html  config.html  copyright.html  deploy.html  genindex.html  index.html  install.html  migrate.html  miscutils.html  objects.inv  overview.html  plugins.html  psp.html  py-modindex.html  pyproject.toml  quickstart.html  run_tests.py  search.html  searchindex.js  setup.py  style.html  taskkit.html  testing.html  tox.ini  tutorial.html  userkit.html  webutils.html
.github/workflows/: release-docs.yml  test-package.yml
_sources/: appdev.rst.txt  changes.rst.txt  config.rst.txt  deploy.rst.txt  index.rst.txt  migrate.rst.txt  miscutils.rst.txt  overview.rst.txt  plugins.rst.txt  psp.rst.txt  quickstart.rst.txt  style.rst.txt  testing.rst.txt  userkit.rst.txt  webutils.rst.txt
_sources/ref/: index.rst.txt
_sources/ref/core/: cookie.rst.txt  httprequest.rst.txt  (+20 more)
_static/: custom.css  documentation_options.js
docs/: appdev.rst  changes.rst  conf.py  config.rst  copyright.rst  deploy.rst  install.rst  migrate.rst  overview.rst  plugins.rst  requirements.txt  taskkit.rst  testing.rst  tutorial.rst
ref/: index.html
ref/core/: application.html  configurableforserversidepath.html  cookie.html  exceptionhandler.html  httpcontent.html  httpexceptions.html  httprequest.html  httpresponse.html  httpservlet.html  importmanager.html  index.html  jsonrpcservlet.html  page.html  picklerpcservlet.html  plugin.html  properties.html  request.html  response.html  rpcservlet.html  servlet.html  servletfactory.html  session.html  sessiondynamicstore.html  sessionfilestore.html  sessionmemcachedstore.html  sessionmemorystore.html  sessionredisstore.html  sessionshelvestore.html  sessionstore.html  sidebarpage.html  transaction.html  unknownfiletypeservlet.html  urlparser.html  wsgistreamout.html  xmlrpcservlet.html
ref/miscutils/: configurable.html  csvjoiner.html  csvparser.html  datatable.html  dateinterval.html  dateparser.html  dbpool.html  dictforargs.html  error.html  funcs.html  index.html  mixin.html  namedvalueaccess.html  paramfactory.html  picklecache.html  picklerpc.html
ref/psp/: braceconverter.html  context.html  generators.html  index.html  parseeventhandler.html  pspcompiler.html  psppage.html  pspparser.html  pspservletfactory.html  psputils.html  servletwriter.html  streamreader.html
ref/taskkit/: index.html  scheduler.html  task.html  taskhandler.html
ref/userkit/: hierrole.html  index.html  role.html  roleuser.html  roleusermanager.html  roleusermanagermixin.html  roleusermanagertofile.html  user.html  usermanager.html  usermanagertofile.html
ref/webutils/: expansivehtmlforexception.html  fieldstorage.html  funcs.html  htmlforexception.html  htmltag.html  httpstatuscodes.html  index.html
webware/: Application.py  ConfigurableForServerSidePath.py  Cookie.py  ExceptionHandler.py  HTTPContent.py  HTTPExceptions.py  HTTPRequest.py  HTTPResponse.py  HTTPServlet.py  ImportManager.py  JSONRPCServlet.py  MockApplication.py  Page.py  PickleRPCServlet.py  PlugIn.py  PlugInLoader.py  Properties.py  RPCServlet.py  Request.py  Response.py  Servlet.py  ServletFactory.py  Session.py  SessionDynamicStore.py  SessionFileStore.py  SessionMemcachedStore.py  SessionMemoryStore.py  SessionRedisStore.py  SessionShelveStore.py  SessionStore.py  SidebarPage.py  Transaction.py  URLParser.py  UnknownFileTypeServlet.py  WSGIStreamOut.py  XMLRPCServlet.py  __init__.py  error404.html
webware/Admin/: Access.py  AdminPage.py  AdminSecurity.py  AppControl.py  Config.py  DumpCSV.py  EditFile.py  Errors.py  LoginPage.py  Main.py  PlugIns.py  ServletCache.py  View.py  __init__.py
webware/Configs/: Application.config
webware/Examples/: AjaxPage.py  AjaxSuggest.py  Colorize.py  Colors.py  CountVisits.py  DBUtilsDemo.py  DominateDemo.py  Error.py  ExamplePage.py  FileUpload.py  Forward.py  ImageDemo.py  Introspect.py  JSONRPCClient.py  JSONRPCExample.py  ListBox.py  LoginPage.py  OtherFileTypes.py  PickleRPCExample.py  PlugInInspector.py  PushServlet.py  RequestInformation.py  SecureCountVisits.py  SecurePage.py  ShowTime.py  View.py  Welcome.py  XMLRPCExample.py  YattagDemo.py  __init__.py  index.py  jsonrpc.js
webware/MiscUtils/: CSVJoiner.py  CSVParser.py  Configurable.py  DBPool.py  DataTable.py  DateInterval.py  DateParser.py  DictForArgs.py  Error.py  Funcs.py  M2PickleRPC.py  MixIn.py  NamedValueAccess.py  ParamFactory.py  PickleCache.py  PickleRPC.py  Properties.py  PropertiesObject.py  __init__.py
webware/PSP/: BraceConverter.py  CompilePSP.py  Context.py  Generators.py  PSPCompiler.py  PSPPage.py  PSPParser.py  PSPServletFactory.py  PSPUtils.py  ParseEventHandler.py  Properties.py  ServletWriter.py  StreamReader.py  __init__.py
webware/Scripts/: MakeAppWorkDir.py  WSGIScript.py  WaitressServer.py  WebwareCLI.py  __init__.py
webware/TaskKit/: Properties.py  Scheduler.py  Task.py  TaskHandler.py  __init__.py
webware/Testing/: DebugPage.py  EmbeddedServlet.py  FieldStorage.py  Forward1.py  Forward2.py  IncludeURLTest.py  Main.py  Servlet.py  ServletImport.py  SetCookie.py  TestCases.data  TestIMS.py  __init__.py
webware/Tests/: TestMocking.py  __init__.py
webware/UserKit/: HierRole.py  Properties.py  Role.py  RoleUser.py  RoleUserManager.py  RoleUserManagerMixIn.py  RoleUserManagerToFile.py  User.py  UserManager.py  UserManagerToFile.py  __init__.py
webware/WebUtils/: CGITraceback.py  ExpansiveHTMLForException.py  FieldStorage.py  Funcs.py  HTMLForException.py  HTMLTag.py  HTTPStatusCodes.py  Properties.py  __init__.py
(+148 files in other folders)
